--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
         </section>
       </div>
       <!-- Our Portfolio -->
-      <div class="container">
-        <section>
+
+      <section class="section-four">
+        <div class="container">
           <h2 class="section-header">Our Portfolio</h2>
           <ul>
             <li>
@@ -214,8 +215,8 @@
               <p class="card-text">Marketing</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
