--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <section class="section-four">
         <div class="container">
           <h2 class="section-header">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="list-sec-four">
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img4.jpg"
