--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <h3 class="card-header">Banking App</h3>
               <p class="card-text">App</p>
             </li>
-            <li>
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img5.jpg"
@@ -174,7 +174,7 @@
               <h3 class="card-header">Cashless Payment</h3>
               <p class="card-text">Marketing</p>
             </li>
-            <li>
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img6.jpg"
@@ -184,7 +184,7 @@
               <h3 class="card-header">Meditation App</h3>
               <p class="card-text">App</p>
             </li>
-            <li>
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img7.jpg"
@@ -194,7 +194,7 @@
               <h3 class="card-header">Taxi Service</h3>
               <p class="card-text">Marketing</p>
             </li>
-            <li>
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img8.jpg"
@@ -204,7 +204,7 @@
               <h3 class="card-header">Screen Illustrations</h3>
               <p class="card-text">Design</p>
             </li>
-            <li>
+            <li class="first-item-list">
               <img
                 class="img-card"
                 src="./images/img9.jpg"
