--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
                 alt="Banking App"
                 width="360"
               />
+              <div class="card-text-sec">
               <h3 class="card-header">Banking App</h3>
               <p class="card-text">App</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img
