update index html

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 width="360"
               />
               <div class="card-text-sec">
-              <h3 class="card-header">Banking App</h3>
-              <p class="card-text">App</p>
+                <h3 class="card-header">Banking App</h3>
+                <p class="card-text">App</p>
               </div>
             </li>
             <li class="first-item-list">
@@ -173,8 +173,10 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="card-header">Cashless Payment</h3>
-              <p class="card-text">Marketing</p>
+              <div class="card-text-sec">
+                <h3 class="card-header">Cashless Payment</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img
@@ -183,8 +185,10 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="card-header">Meditation App</h3>
-              <p class="card-text">App</p>
+              <div class="card-text-sec">
+                <h3 class="card-header">Meditation App</h3>
+                <p class="card-text">App</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img
@@ -193,8 +197,10 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="card-header">Taxi Service</h3>
-              <p class="card-text">Marketing</p>
+              <div class="card-text-sec">
+                <h3 class="card-header">Taxi Service</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img
@@ -203,8 +209,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="card-header">Screen Illustrations</h3>
-              <p class="card-text">Design</p>
+              <div class="card-text-sec">
+                <h3 class="card-header">Screen Illustrations</h3>
+                <p class="card-text">Design</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img
@@ -213,8 +221,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="card-header">Online Courses</h3>
-              <p class="card-text">Marketing</p>
+              <div class="card-text-sec">
+                <h3 class="card-header">Online Courses</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
