--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <section class="section-our-team">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
-          <ul>
+          <ul class="list-sec-three">
             <li class="our-team-backcolor">
               <img
                 class="img-card"
