--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                 alt="Product Designer"
                 width="264"
               />
+              <div class="list-item-three">
               <h3 class="card-header-three">Mark Guerrero</h3>
               <p class="card-text-three">Product Designer</p>
+            </div>
             </li>
             <li class="our-team-backcolor">
               <img
