update index html

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 width="264"
               />
               <div class="list-item-three">
-              <h3 class="card-header-three">Mark Guerrero</h3>
-              <p class="card-text-three">Product Designer</p>
-            </div>
+                <h3 class="card-header-three">Mark Guerrero</h3>
+                <p class="card-text-three">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-backcolor">
               <img
@@ -125,8 +125,10 @@
                 alt="Frontend Developer"
                 width="264"
               />
-              <h3 class="card-header-three">Tom Ford</h3>
-              <p class="card-text-three">Frontend Developer</p>
+              <div class="list-item-three">
+                <h3 class="card-header-three">Tom Ford</h3>
+                <p class="card-text-three">Frontend Developer</p>
+              </div>
             </li>
             <li class="our-team-backcolor">
               <img
@@ -135,8 +137,10 @@
                 alt="Marketing"
                 width="264"
               />
-              <h3 class="card-header-three">Camila Garcia</h3>
-              <p class="card-text-three">Marketing</p>
+              <div class="list-item-three">
+                <h3 class="card-header-three">Camila Garcia</h3>
+                <p class="card-text-three">Marketing</p>
+              </div>
             </li>
             <li class="our-team-backcolor">
               <img
@@ -145,8 +149,10 @@
                 alt="UI Designer"
                 width="264"
               />
-              <h3 class="card-header-three">Daniel Wilson</h3>
-              <p class="card-text-three">UI Designer</p>
+              <div class="list-item-three">
+                <h3 class="card-header-three">Daniel Wilson</h3>
+                <p class="card-text-three">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
