update index html

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         </section>
       </div>
       <!-- Section 2 -->
-      <div class="container">
-        <section>
+
+      <section class="section-two">
+        <div class="container">
           <h2 class="section-header-two">Our goal</h2>
           <ul>
             <li>
@@ -98,8 +99,9 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+
       <!-- Section 3 -->
 
       <section class="section-our-team">
