--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <section class="section-two">
         <div class="container">
-          <h2 class="section-header-two">Our goal</h2>
+          <h2 class="section-header-two visually-hidden">Our goal</h2>
           <ul>
             <li>
               <h3 class="section-head-two">Strategy</h3>
