--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <section class="section-two">
         <div class="container">
           <h2 class="section-header-two visually-hidden">Our goal</h2>
-          <ul>
-            <li>
+          <ul class="list-sec-two">
+            <li class="list-item-two">
               <h3 class="section-head-two">Strategy</h3>
               <p class="section-text-two">
                 Our goal is to identify the business problem to walk away with
